[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ragent"
version = "0.1.0"
description = "CLI agent for querying FDA 510(k) device data"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

authors = [
  { name = "Tal Bre", email = "tal@example.com" }
]

dependencies = [
  "requests>=2.31.0",
]

[project.scripts]
ragent = "ragent.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
